# hammingCode

doc/: UML class diagram.drawio
hammingCode/: CMakeLists.txt  CMakeLists.txt.user.d421d5d  main.cpp
hammingCode/c_hamming/h/: c_hamming.h
hammingCode/c_hamming/src/: c_hamming.cpp
hammingCode/c_hamming/src/hamming_impl/c_hamming_impl_boost/h/: cHammingImplBoost.h
hammingCode/c_hamming/src/hamming_impl/c_hamming_impl_boost/src/: cHammingImplBoost.cpp
hammingCode/c_hamming/src/hamming_impl/c_hamming_impl_iface/h/: cHammingImplIface.h
hammingCode/hamming_message/c_hamming_message_iface/h/: c_hamming_message_iface.h
